--- a/style.css
+++ b/style.css
@@ -1,43 +1,65 @@
 body {
+    display: flex;
+    flex-direction: column;
     border: 0px;
     margin: 0px;
-    background-image: url("background2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 .papaDiv {
     /* border: 5px; */
-    height: 1000px;
+    height: 100vh;
     display: flex;
-    /* position: fixed; */
-    /* border-color: aliceblue; */
+    flex-direction: column;
+    background-image: url("https://images.unsplash.com/photo-1614624532983-4ce03382d63d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #navDiv {
-    /* border: 12px; */
     display: flex;
     justify-content: center;
-    flex: 25%;
     border-color: red;
     align-self: left;
-    height:100%;
-    width:25%;
+    height:100vh;
+    width:20%;
     position: fixed;
     opacity: .5;
     color:white;
     background-color: black;
 }
 #scrollDiv { 
-    flex: 75%;
-    color:green;
+    color: white;
     align-self: right;
-    height: 100%;
+    height: 100vh;
     width: 75%;
-    position: relative;
-    right: 0;
-    padding-left: 25%;
+    padding-left: 20%;
+    display: flex;
+    flex-direction: column;
 }
 .Navhead{
     font-size: 35px;
-    align-self:center ;
+    align-self:center;
     line-height: 45px;
+}
+.introbox{
+    margin: auto;
+    width: 45%;
+    border: 3px solid black;
+    padding: 10px;
+    background-color: black;
+    opacity: .5;
+    color: white;
+    margin-top: 250px;
+    border-radius: 20px;
+    font-size: 22px;
+    position: relative;
+}
+
+.chacha1Div {
+    background-color: royalblue;
+    margin-left: 20%;    
+    height: 100vh;
+}
+.chacha2Div {
+    background-color: red; 
+    margin-left: 20%;
+    height: 100vh;
 }
