--- a/InterCore/css/style.default.css
+++ b/InterCore/css/style.default.css
@@ -12247,16 +12247,20 @@ a.text-hover-dark:focus, a.text-hover-dark:hover {
 .distancefromabove{
   margin-top: 20px;
 }
+.internshipsTypes ul li{
+  text-decoration: none;
+}
 .internshipsTypes{
   display:flex;
 }
 .internshipsTypes p{
   margin-top: 20px;
   margin-left: 40px;
+  color: #6c757d;
 }
 .internshipsTypes h2{
   margin-top: 40px;
-  margin-left: 40px;
+  margin-left: 30px;
 }
 .colortext{
   color: #6c757d;
